<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HigherLowerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/Guess_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dice_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:src="@drawable/dice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvLastThrow"
        android:layout_width="146dp"
        android:layout_height="20dp"
        android:layout_marginTop="56dp"
        android:text="@string/last_throw"
        app:layout_constraintBottom_toTopOf="@+id/Btn_equall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_imageView" />

    <Button
        android:id="@+id/Btn_lower"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/Btn_lower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Btn_equall"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Btn_equall"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/Btn_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Btn_higher"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Btn_higher"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:text="@string/Btn_higher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCurrentThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/current_throw"
        app:layout_constraintBottom_toTopOf="@+id/Btn_equall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvLastThrow"
        app:layout_constraintTop_toBottomOf="@+id/dice_imageView"
        app:layout_constraintVertical_bias="0.605" />

</androidx.constraintlayout.widget.ConstraintLayout>

